objects/Recruiter__c.object
<CustomObject>
    <label>Recruiter</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Job Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruiters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Recruiters</relationshipLabel>
        <relationshipName>Recruiters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>VIZAG</fullName>
                </value>
                <value>
                    <fullName>PUNE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1+</fullName>
                </value>
                <value>
                    <fullName>2+</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_CTC__c</fullName>
        <label>Offered CTC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Experiences__c</fullName>
        <label>Work Experiences</label>
        <type>TextArea</type>
    </fields>
</CustomObject>